# juper

./: .gitignore  Makefile  README.md
crates/juper_swap_api/: Cargo.toml
crates/juper_swap_api/src/: anyix.rs  api.rs  error.rs  lib.rs  price_types.rs  quote_types.rs  quoter.rs  route_cache.rs  slippage.rs  swap_types.rs  swapper.rs  types.rs  utils.rs
crates/juper_swap_api/src/anyix/: mod.rs  swap.rs
crates/juper_swap_cpi/: Cargo.toml
crates/juper_swap_cpi/src/: lib.rs
crates/juper_swap_cpi/src/accounts/: mod.rs
crates/juper_swap_cpi/src/instructions/: aldrin.rs  aldrin_v2.rs  cropper.rs  cykura.rs  lifinity.rs  mercurial.rs  mod.rs  raydium.rs  raydium_v2.rs  risk_check_and_fee.rs  saber.rs  serum.rs  sighashes.rs  token_ledger.rs  token_swap.rs  v6_ixs.rs  whirlpool.rs
